2023-02-06  Hannes von Haugwitz  <hannes@vonhaugwitz.com>
	* Release aide 0.18

2023-02-05 Marc Haber <mh+debian-packages@zugschlus.de>
	* Update aide.conf.5 manual page

2023-01-22 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Update man pages
	* Minor code cleanup
	* Improve some logging

2023-01-21 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Adjust some log messages
	* Add SECURITY.md to EXTRA_DIST
	* Remove mmap support for hashsum calculation
	* Add warning if rule tree is empty
	* Update --help message
	* Update --version message

2023-01-20 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Limit hashsum calculation of growing files to stat size
	* Refactor size mismatch warning during hash calculation
	* Ensure size is always written to database if growing attribute is set

2023-01-19 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix hash calculation for growing files

2023-01-18 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Also ignore bcount attribute for compressed files

2023-01-17 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix special attributes handling when pthread is not compiled in

2023-01-16 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add 'growing' and 'compressed' special attributes
	  - support uncompressed hashsum comparison for gzip files (closes: #33)
	  - support hashsums for growing files (closes: #34)
	  - 'S' attribute is now deprecated, use 'growing+s' attributes instead
	  - replace 'S' attribute in '>' compound group with 'growing+s'
	  - add new log level 'compare'
	  - improve some logging

2023-01-15 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Do not show 'different attributes' message for ignored attributes

2022-11-20 Sam James <sam@gentoo.org>
	* Fix bashisms in build system
	* Fix configure.ac compatibility with Clang 16

2022-11-06 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Remove Prelink support (--with-prelink configure option)

2022-11-01 Hannes von Haugwitz <hannes@vonhaugwitz.com>